--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "devDependencies": {
+    "browserify": "^17.0.0",
     "gulp": "^4.0.2",
     "gulp-clean": "^0.4.0",
     "gulp-cli": "^2.3.0",
     "gulp-jshint": "^2.1.0",
     "gulp-typescript": "^6.0.0-alpha.1",
-    "typescript": "^5.1.6"
+    "tsify": "^5.0.4",
+    "typescript": "^5.1.6",
+    "vinyl-source-stream": "^2.0.0"
   }
 }
