--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gulp-cli": "^2.3.0",
     "gulp-jshint": "^2.1.0",
     "gulp-typescript": "^6.0.0-alpha.1",
+    "gulp-watch": "^5.0.1",
     "tsify": "^5.0.4",
     "typescript": "^5.1.6",
     "vinyl-source-stream": "^2.0.0",
